kanc/src/tests/sample_code/should_succeed/single_file/with_warnings/check/type_of_type0.k
type Unit {
    c: Unit,
}

let x = check (Type: ?) {
    Unit.c
};
