kanc/src/tests/sample_code/should_fail/single_file/type_check/illegal_type/forall_output.k
type U {
    .u: U,
}

let foo = forall(x: U) { U.u };
